force-app/main/default/objects/Collection_Allocation__c/Collection_Allocation__c.object-meta.xml
<CustomObject>
    <label>Collection Allocation</label>
    <pluralLabel>Collection Allocations</pluralLabel>
    <nameField>
        <label>Allocation Number</label>
        <displayFormat>ALLOC-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction between Collection__c and Invoice__c to split a single payment (e.g., one cheque) across multiple invoices</description>
</CustomObject>