force-app/main/default/objects/Collection_Allocation__c/fields/Allocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Amount__c</fullName>
    <label>Allocated Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Amount from the parent Collection that is allocated to this specific invoice</description>
</CustomField>