force-app/main/default/objects/Collection_Allocation__c/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <label>Collection</label>
    <type>MasterDetail</type>
    <referenceTo>Collection__c</referenceTo>
    <relationshipLabel>Invoice Allocations</relationshipLabel>
    <relationshipName>Invoice_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>