force-app/main/default/objects/Collection_Allocation__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Collection Allocations</relationshipLabel>
    <relationshipName>Collection_Allocations</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>